For Java 11